--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="main">
         <h1>Онлайн Пиццерия</h1>
-        <img src="C:\Users\yakob\OneDrive\Рабочий стол\telegram bot\57a4d2fbcf28e3159a2ee14ac8982a86.png">
+        <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
         <p>Добро пожаловать езжи!</p>
         <button id="buy">Купить</button>
     </div>
