--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name = "viewport" content="width=device-width, user-scalable=no, initial-scale=1.0 maximum-scale=1.0, mini,u,-scale=1.0" >
-    <meta http-equiv="X-UA-Compatible" content= "ie=edge">
-    <title>Shop</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <div id="main">
-        <h1>Онлайн Пиццерия</h1>
-        <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
-        <p>Добро пожаловать езжи!</p>
-        <button id="buy">Купить</button>
+    <div class="container">
+        <div class="inner">
+            <div class="item">
+                <img src="1.png">
+                <button class="btn" id="btn1">Add</button>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
