--- a/index.html
+++ b/index.html
@@ -13,6 +13,26 @@
                 <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
                 <button class="btn" id="btn1">Add</button>
             </div>
+            <div class="item">
+                <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
+                <button class="btn" id="btn1">Add</button>
+            </div>
+            <div class="item">
+                <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
+                <button class="btn" id="btn1">Add</button>
+            </div>
+            <div class="item">
+                <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
+                <button class="btn" id="btn1">Add</button>
+            </div>
+            <div class="item">
+                <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
+                <button class="btn" id="btn1">Add</button>
+            </div>
+            <div class="item">
+                <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
+                <button class="btn" id="btn1">Add</button>
+            </div>
         </div>
 
     </div>
