--- a/index.html
+++ b/index.html
@@ -10,31 +10,34 @@
     <div class="container">
         <div class="inner">
             <div class="item">
-                <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
+                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni">
                 <button class="btn" id="btn1">Add</button>
             </div>
             <div class="item">
-                <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
-                <button class="btn" id="btn1">Add</button>
+                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni">
+                <button class="btn" id="btn2">Add</button>
             </div>
             <div class="item">
-                <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
-                <button class="btn" id="btn1">Add</button>
+                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni">
+                <button class="btn" id="btn3">Add</button>
             </div>
             <div class="item">
-                <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
-                <button class="btn" id="btn1">Add</button>
+                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni">
+                <button class="btn" id="btn4">Add</button>
             </div>
             <div class="item">
-                <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
-                <button class="btn" id="btn1">Add</button>
+                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni">
+                <button class="btn" id="btn5">Add</button>
             </div>
             <div class="item">
-                <img src="https://i.pinimg.com/originals/57/a4/d2/57a4d2fbcf28e3159a2ee14ac8982a86.png">
-                <button class="btn" id="btn1">Add</button>
+                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni">
+                <button class="btn" id="btn6">Add</button>
             </div>
         </div>
 
     </div>
+    <div class="usercard" id="usercard"></div>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
