--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
     <div class="container">
         <div class="inner">
             <div class="item">
-                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni" class="img">
+                <img src="1.png" alt="Pepperoni" class="img">
                 <button class="btn" id="btn1">Add</button>
             </div>
             <div class="item">
-                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni" class="img">
+                <img src="1.png" alt="Pepperoni" class="img">
                 <button class="btn" id="btn2">Add</button>
             </div>
             <div class="item">
-                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni" class="img">
+                <img src="1.png" alt="Pepperoni" class="img">
                 <button class="btn" id="btn3">Add</button>
             </div>
             <div class="item">
-                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni" class="img">
+                <img src="1.png" alt="Pepperoni" class="img">
                 <button class="btn" id="btn4">Add</button>
             </div>
             <div class="item">
-                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni" class="img">
+                <img src="1.png" alt="Pepperoni" class="img">
                 <button class="btn" id="btn5">Add</button>
             </div>
             <div class="item">
-                <img src="https://avatars.mds.yandex.net/i?id=c44e272bc1183aa3187632ffb9d028e4_sr-5882727-images-thumbs&n=13" alt="Pepperoni" class="img">
+                <img src="1.png" alt="Pepperoni" class="img">
                 <button class="btn" id="btn6">Add</button>
             </div>
         </div>
