--- a/index.html
+++ b/index.html
@@ -35,11 +35,21 @@
 			</div>
 		</div>
 	</div>
-	<div class="usercard" id="usercard">
 
-	</div>
+
+	<button id="buy">Оформить</button>
 
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
-	<script src="app.js"></script>
+	<script>
+		let tg = window.Telegram.WebApp;
+		let buy = document.getElementById("buy");
+		buy.addEventListener("click", () => {
+			document.getElementById("main").style.display = "none;
+			document.getElementById("form").style.display = "block";
+			document.getElementById("username").value = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name;
+
+
+		});
+	</script>
 </body>
 </html>
