--- a/index.html
+++ b/index.html
@@ -35,21 +35,11 @@
 			</div>
 		</div>
 	</div>
+	<div class="usercard" id="usercard">
 
-
-	<button id="buy">Оформить</button>
+	</div>
 
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
-	<script>
-		let tg = window.Telegram.WebApp;
-		let buy = document.getElementById("buy");
-		buy.addEventListener("click", () => {
-			document.getElementById("main").style.display = "none;
-			document.getElementById("form").style.display = "block";
-			document.getElementById("username").value = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name;
-
-
-		});
-	</script>
+	<script src="app.js"></script>
 </body>
 </html>
